# summarizer

./: AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yaml  release.yml
app/: __init__.py  chunking.py  compression.py  config.py  guards.py  main.py  metrics.py  models.py  prompts.py  selection.py
summarizer/: __init__.py  main.py
tests/: test_agents_md.py  test_api.py  test_ci_workflows.py  test_models.py  test_pipeline.py  test_release_artifacts.py  test_summarize.py  test_tooling_config.py
