[project]
name = "summarizer"
version = "0.1.0"
description = "Simple FastAPI summarization service"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Auto Generated"}
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
