[project]
name = "summarizer"
version = "0.1.0"
description = "Simple FastAPI summarization service"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Auto Generated"}
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "httpx>=0.27",
    "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["mcp_plex"]
relative_files = true

[tool.coverage.report]
omit = ["tests/*"]